// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview always renders data regardless 1`] = `
<AnimFade>
  <ContentCard__ContentCard
    column={true}
  >
    <CardTitle__CardTitle
      invert={false}
    >
      Overview
    </CardTitle__CardTitle>
    <p>
      # Sample Title
    </p>
  </ContentCard__ContentCard>
</AnimFade>
`;

exports[`Overview renders empty content message 1`] = `
<AnimFade>
  <ContentCard__ContentCard
    column={true}
  >
    <CardTitle__CardTitle
      invert={false}
    >
      Overview
    </CardTitle__CardTitle>
    <NoContent>
      You're project doesn't contain a README.md file.
      <br />
      Why don't you 
      <Link
        replace={false}
        to="files/create"
      >
        create one?
      </Link>
    </NoContent>
  </ContentCard__ContentCard>
</AnimFade>
`;
